--- a/modules/music/music.css
+++ b/modules/music/music.css
@@ -1,5 +1,3 @@
-#divMainMusic { background: url('img/main-music.jpg'); }
-
 .music-item
 {
 	position: relative;
